# ecrimagemetadataextractor

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/ecrimagemetadataextractor/: __main__.py  capture_metadata.py  cli.py  util.py
tests/: test_capture_metadata.py
