[project]
name = "ecrimagemetadataextractor"
version = "0.1.0"
description = "Simple CLI tool to extract the image manifest from an AWS ECR hosted container"
readme = "README.md"
authors = [
    { name = "vasuper", email = "vasu3797@gmail.com" } 
]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.39",
    "requests>=2.32.3",
]

[project.scripts]
ecrimagemetadataextractor = "ecrimagemetadataextractor.__main__:runner"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
