[project]
name = "ecrimagemetadataextractor"
version = "0.1.0"
description = "Simple CLI tool to extract the image manifest from an AWS ECR hosted container"
readme = "README.md"
authors = [
    { name = "vasuper", email = "vasu3797@gmail.com" } 
]
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.39",
    "pytest>=8.3.3",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20240914",
]

[project.scripts]
ecrimagemetadataextractor = "ecrimagemetadataextractor.__main__:runner"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
